Fix css problem. MaterialForm's canvas was covering whole area
Why: somehow MaterialForm's canvas inherited flex-grow.

How: more specific css targetting.

Tags: CSS

--- a/html/css/default.css
+++ b/html/css/default.css
@@ -61,7 +61,7 @@ body {
   position: relative;
   overflow: hidden;
 }
-canvas {
+#glcanvas {
   position: absolute;
   left: 0px;
   top: 0px;
